test/Fail/Issue5558.err
Issue5558.agda:3.8-9: error: [MissingDataDeclaration]
Data definition A misses a data declaration

Issue5558.agda:6.8-9: error: [MissingDataDeclaration]
Data definition B misses a data declaration
